# Commerce_Place_2.0

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: carroyage_bbox_audincourt.json  carroyage_bbox_bavans.json  carroyage_bbox_belfort.json  carroyage_bbox_besancon.json  carroyage_bbox_montbeliard.json  carroyage_bbox_paris.json  carroyage_bbox_voujeaucourt.json  categories.py
legacy_agent/: Agent-Python-Donnes_de_commerces_a_partir_dune_ville.py
scripts/: download_insee_carroyage.py
src/city_insights_api/: __init__.py  app.py
src/city_insights_api/api/: __init__.py  routes.py
src/city_insights_api/core/: __init__.py  config.py
src/city_insights_api/models/: api.py  domain.py
src/city_insights_api/services/: __init__.py  agent_adapter.py  carroyage.py  chat_history.py  conversation_agent.py  insee_downloader.py  map_builder.py  metrics.py  pipeline.py  web_search.py
template-chatbot-ang/: README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
template-chatbot-ang/src/: index.html  styles.css
template-chatbot-ang/src/app/: app.component.css  app.component.html  app.component.ts
template-chatbot-ang/src/app/components/camera-view/: camera-view.component.css  camera-view.component.html  camera-view.component.ts
template-chatbot-ang/src/app/components/hub-view/: hub-view.component.html  (+1 more)
template-chatbot-ang/src/app/data/: usages.ts
template-chatbot-ang/src/app/models/: chat-session.ts  hub.ts  message.ts  usage.ts
template-chatbot-ang/src/app/services/: ai.service.ts
(+21 files in other folders)
